--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,3 +19,9 @@ $border-radius: 12px;
 
 //border-containers
 $border-containers: 1px solid rgb(229, 229, 229);
+
+// animations
+
+$timeSlow: 1s;
+$timeMedium: 0.5s;
+$timeFast: 0.25s;
