--- a/src/components/infoDrinks/index.module.scss
+++ b/src/components/infoDrinks/index.module.scss
@@ -70,8 +70,7 @@
     font-weight: bold;
     font-size: 16px;
     background-color: transparent;
-    border: $border;
-    border-radius: $border-radius;
+    border: 0;
     padding: 5px 12px;
     cursor: pointer;
   }
